--- a/src/components/CityItem.module.css
+++ b/src/components/CityItem.module.css
@@ -10,7 +10,7 @@
   padding: 1rem 2rem;
   border-left: 5px solid var(--color-brand--2);
   cursor: pointer;
-
+  margin: 1rem;
   color: inherit;
   text-decoration: none;
 }
